--- a/client/heatmap.html
+++ b/client/heatmap.html
@@ -2,9 +2,9 @@
 <html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <link rel="stylesheet" href="./details/leaflet_heatmap_files/example-commons.css">
-  <link rel="stylesheet" href="./details/leaflet_heatmap_files/leaflet.css">
-  <script src="./details/leaflet_heatmap_files/leaflet.js"></script>
+  <link rel="stylesheet" href="/api/leaflet_heatmap_files/example-commons.css">
+  <link rel="stylesheet" href="/api/leaflet_heatmap_files/leaflet.css">
+  <script src="/api/leaflet_heatmap_files/leaflet.js"></script>
 
 </head>
 <body class="">
@@ -15,32 +15,29 @@
     </div>
   </div>
   <button type="button" onclick="startAnime()">Start</button>
-  <script src="./details/leaflet_heatmap_files/heatmap.js"></script>
-  <script src="./details/leaflet_heatmap_files/leaflet-heatmap.js"></script>
-  <script>
+  <script src="/api/leaflet_heatmap_files/heatmap.js"></script>
+  <script src="/api/leaflet_heatmap_files/leaflet-heatmap.js"></script>
+  <script>    
+    var baseLayer = L.tileLayer(
+      'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+        maxZoom: 18
+      }
+    );
+
+    var cfg = {
+      "radius": 2,
+      "maxOpacity": .8,
+      "scaleRadius": true,
+      "useLocalExtrema": true,
+      latField: 'lat',
+      lngField: 'lng',
+      valueField: 'count'
+    };
+
+    var heatmapLayer = new HeatmapOverlay(cfg);
 
     function startAnime()
     {
-      console.log("aze");
-        var baseLayer = L.tileLayer(
-          'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
-            maxZoom: 18
-          }
-        );
-
-        var cfg = {
-          "radius": 2,
-          "maxOpacity": .8,
-          "scaleRadius": true,
-          "useLocalExtrema": true,
-          latField: 'lat',
-          lngField: 'lng',
-          valueField: 'count'
-        };
-
-        var heatmapLayer = new HeatmapOverlay(cfg);
-
-
         /*-*/startPoint = [{lat: 35.8278, lng:-78.6421, count: 1}, {lat: 46.90, lng:-117.46, count: 1}, {lat: 46.80, lng:-117.3, count: 1}];/*-*/
 
         var testData = {
@@ -51,8 +48,7 @@
 
         /*_*/endPoint = [{lat: 46.90, lng:-117.46, count: 1}, null, null];/*_*/
 
-      var refreshIntervalId = setInterval(function() {
-
+        var refreshIntervalId = setInterval(function() {
             var newData = [];
 
             for (var i = 0; i < startPoint.length; i++)
@@ -96,30 +92,11 @@
     };
 
     window.onload = function() {
-        var baseLayer = L.tileLayer(
-          'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
-            maxZoom: 18
-          }
-        );
-
-        var cfg = {
-          "radius": 2,
-          "maxOpacity": .8,
-          "scaleRadius": true,
-          "useLocalExtrema": true,
-          latField: 'lat',
-          lngField: 'lng',
-          valueField: 'count'
-        };
-
-        var heatmapLayer = new HeatmapOverlay(cfg);
-
         var map = new L.Map('map-canvas', {
           center: new L.LatLng(0, 0),
           zoom: 3,
           layers: [baseLayer, heatmapLayer]
         });
-
 
         /*-*/startPoint = [{lat: 35.8278, lng:-78.6421, count: 1}, {lat: 46.90, lng:-117.46, count: 1}, {lat: 46.80, lng:-117.3, count: 1}];/*-*/
 
