--- a/client/heatmap.html
+++ b/client/heatmap.html
@@ -6,18 +6,48 @@
   <link rel="stylesheet" href="/api/leaflet_heatmap_files/leaflet.css">
   <script src="/api/leaflet_heatmap_files/leaflet.js"></script>
 
+  <style>
+    .topButton {
+      padding: 10px;
+      display: flex;
+      justify-content: space-around;
+    }
+  </style>
 </head>
 <body class="">
+  <div class="topButton">
+    <button class="button is-button is-primary" disabled>
+      Voir la suite du trajet
+    </button>
+  </div>
   <div class="wrapper">
     <div class="demo-wrapper">
       <div class="heatmap leaflet-container leaflet-fade-anim" id="map-canvas" style="position: relative;" tabindex="0">
       </div>
     </div>
   </div>
+  <div class="modal" id="modal">
+    <div class="modal-background"></div>
+    <div class="modal-content">
+      Test
+      <!-- Any other Bulma elements you want -->
+    </div>
+      <a href="http://localhost:81/">
+        <button class="button is-button is-primary">
+          Nouvelle partie
+        </button>
+      </a>
+  </div>
   <button type="button" onclick="startAnime()">Start</button>
   <script src="/api/leaflet_heatmap_files/heatmap.js"></script>
   <script src="/api/leaflet_heatmap_files/leaflet-heatmap.js"></script>
-  <script>    
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <script>
+    let dirtyGlobal;
+    let nextButton;
+    let modal;
+
     var baseLayer = L.tileLayer(
       'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
         maxZoom: 18
@@ -43,19 +73,35 @@
     };
 
     document.addEventListener("DOMContentLoaded", () => {
+      nextButton = document.getElementsByClassName("topButton")[0];
+      modal = document.getElementById("modal");
       Client.GET("components").then((res1) => {
         res1.json().then((composants) => {
           console.log("Composants : ", composants);
-          Client.GET("gameresult/" + userGame).then((res2) => {
+          const urlParams = new URLSearchParams(window.location.search);
+          Client.GET("gameresult/" + urlParams.get("gId")).then((res2) => {
             res2.json().then((gameResult) => {
                 const userComposants = gameResult.componentIds.map(id => composants.find((c) => c._id === id));
                 const allEtapes = userComposants.flatMap(composant => composant.etapesFabrication);
-                const allGPS = allEtapes.flatMap(fab => fab.localisation.gps).map(gps => ({lat: gps.x, lng: gps.y, count: 1}));
+                const allGPS = allEtapes.flatMap(fab => ({idEtape: fab.idEtape, gps: fab.localisation.gps}))
+                        .map(({idEtape, gps}) => ({lat: gps.x, lng: gps.y, count: 1, idEtape: idEtape}));
+
                 console.log("Tous les points", allGPS);
                 console.log("Componsants du joueur ", userComposants);
                 console.log("Toutes les etapes des composants du joueur ", allEtapes);
                 console.log("Resultat du jeu : ", gameResult);
                 startMap(allGPS);
+                dirtyGlobal = allGPS;
+                console.log(nextButton.children);
+                nextButton.children[0].disabled = false;
+                nextButton.onclick = () => {
+                  startAnime();
+                  console.log("Clicked");
+                  nextButton.children[0].disabled = true;
+                  setTimeout(() => {
+                    modal.className = modal.className + " is-active"
+                  }, 7000);
+                }
             });
           });
         });
@@ -64,7 +110,7 @@
 
     function startAnime()
     {
-        let startPoint = allGPS;
+        let startPoint = dirtyGlobal.filter(p => p.idEtape === 1);
 
         var testData = {
             max: 99,
@@ -72,7 +118,7 @@
           };
         heatmapLayer.setData(testData);
 
-        /*_*/endPoint = [{lat: 46.90, lng:-117.46, count: 1}, null, null];/*_*/
+        /*_*/endPoint = [{lat: 46.90, lng:-117.46, count: 1}, null, null];  //dirtyGlobal.filter(p => p.idEtape === 2);/*_*/
 
         var refreshIntervalId = setInterval(function() {
             var newData = [];
@@ -124,7 +170,7 @@
           layers: [baseLayer, heatmapLayer]
         });
 
-        /*-*/startPoint = pts;/*-*/
+        /*-*/startPoint = pts.filter(p => p.idEtape === 1);/*-*/
 
         var testData = {
             max: 99,
@@ -132,7 +178,7 @@
           };
         heatmapLayer.setData(testData);
 
-        /*_*/endPoint = [{lat: 46.90, lng:-117.46, count: 1}, null, null];/*_*/
+        /*_*/endPoint = pts.filter(p => p.idEtape === 2);/*_*/
     };
 
   </script>
