--- a/client/heatmap.html
+++ b/client/heatmap.html
@@ -32,7 +32,7 @@
       Test
       <!-- Any other Bulma elements you want -->
     </div>
-      <a href="http://localhost:81/">
+      <a href=".">
         <button class="button is-button is-primary">
           Nouvelle partie
         </button>
