--- a/client/heatmap.html
+++ b/client/heatmap.html
@@ -46,7 +46,7 @@
               <hr />
               <li>Cela represente l'absortion de <div class="is-inline" id="scTree"></div> arbres pendant 1 an</li>
               <hr />
-              <li>Cela équivaut à la production de <div class="is-inline" id="scPatate"></div> de pommes de terrre</li>
+              <li>Cela équivaut à la production de <div class="is-inline" id="scPatate"></div> killos de pommes de terrre</li>
               <hr />
               <li>En ???</li>
               <div>
