--- a/client/heatmap.html
+++ b/client/heatmap.html
@@ -99,12 +99,16 @@
           <br>
           <div class="">
             <ul>
-              <li>Émissions de dioxyde de carbone : <div class="is-inline" id="scCO2"></div> tonnes</li>
+              <li>Émissions de dioxyde de carbone : <div class="is-inline" id="scCO2" style="font-weight: bold;"></div> tonnes</li>
               <hr />
-              <li>Soit l'absortion de <div class="is-inline" id="scTree"></div> arbres pendant 1 an</li>
+              <li>Soit l'absortion de <div class="is-inline" id="scTree" style="font-weight: bold;"></div> arbres pendant 1 an</li>
               <hr />
-              <li>Ou la production de <div class="is-inline" id="scPatate"></div> kilos de pommes de terrre</li>
+              <li>Cela represente <div class="is-inline" id="scTreeSize" style="font-weight: bold;"></div> mètres carres du foret</li>
               <hr />
+              <li>Ou la production de <div class="is-inline" id="scPatate" style="font-weight: bold;"></div> kilos de pommes de terrre</li>
+              <hr />
+              <li>Ou bien <div class="is-inline" id="scCar" style="font-weight: bold;"></div> km parcourus par une voiture.</li>
+              <li> C'est équvalient à <div class="is-inline" id="scCarEarth" style="font-weight: bold;"></div> tours du Monde.</li>
                 <!--
                   <li>En ???</li>
                 !-->
@@ -267,15 +271,22 @@
     {
       var co2Tonnes = Math.round((score * 100000)/ 1000000);
       var co2Tree = Math.round(((score * 100000)/1000)/35);
+      var co2TreeSize = Math.round(co2Tree/80);
       var co2Patate = Math.round(((score * 100000)/1000)/4.7);
+      var co2Car = Math.round((score*100000)/180);
+      var co2CarEarth = co2Car/40000;
+
       /*
       35000 en arbres
        1g de CO2 = 4.7 kilos de pommes de terre
        */
 
-      document.getElementById("scCO2").innerHTML = co2Tonnes;
+      document.getElementById("scCO2").innerText = co2Tonnes;
       document.getElementById("scTree").innerText = co2Tree;
       document.getElementById("scPatate").innerText = co2Patate;
+      document.getElementById("scTreeSize").innerText = co2TreeSize;
+      document.getElementById("scCar").innerText = co2Car;
+      document.getElementById("scCarEarth").innerText = co2CarEarth.toFixed(1);
 
     };
 
