New score screen

--- a/client/heatmap.html
+++ b/client/heatmap.html
@@ -118,7 +118,7 @@
           <br>
           <p class="subtitle has-text-centered"> Par rapport le monde :</p>
           <div class="">
-            <p>Dans le monde, en 2017, 1.56 milliards de téléphones ont été vendu soit 50 par secondes.</p>
+            <p>Dans le monde, en 2017, 1.56 milliards de téléphones ont été vendu. En admettant que tout les téléphones vendus dans le monde sont celui qui vient d'être créé voici ce qu'a généré le transport des minerais nécessaires à leur création</p>
           </div>
         </section>
 
@@ -275,7 +275,7 @@
     {
       var co2Tonnes = Math.round((score * 1000000)/ 1000000);
       var co2Tree = Math.round(((score * 1000000)/1000)/35);
-      var co2TreeSize = Math.round(co2Tree/23);
+      var co2TreeSize = Math.round(co2Tree/80);
       var co2Patate = Math.round(((score * 1000000)/1000)/4.7);
       var co2Car = Math.round((score*1000000)/180);
       var co2CarEarth = co2Car/40000;
